# ZS-TTCS

./: .gitattributes  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cpp/: bindings.cpp  forman.cpp  forman.h
zs_ttcs/: __init__.py  cli.py  pipeline.py  step1_segformer_first.py  step2_mask_ndvi.py  step3_forman_gradient.py
