# pyproject.toml
[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6",
    "numpy>=1.19",
]
build-backend = "setuptools.build_meta"

[project]
name = "ZS-TTCS"
version = "0.1.0"
description = "ZeroShot-Topological Tree Crown Segmentor"
readme = "README.md"
authors = [
    {name = "Gergo Dioszegi", email = "dijogergo@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.19",
    "torch>=1.9",
    "transformers>=4.11",
    "rasterio>=1.2",
    "pillow>=8.0",
    "matplotlib>=3.3",
    "scipy>=1.5",
    "scikit-image>=0.18",
    "geopandas>=0.9",
    "shapely>=1.7",
    "tqdm>=4.50",
    "pybind11>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.0", "black>=21.0", "flake8>=3.9"]
viz = ["plotly>=5.0", "folium>=0.12"]

[project.urls]
Homepage = "https://github.com/DijoG/ZS-TTCS"
Documentation = "https://github.com/DijoG/ZS-TTCS"
"Bug Reports" = "https://github.com/DijoG/ZS-TTCS/issues"

[project.scripts]
zs-ttcs-step1 = "zs_ttcs.cli:step1_cli"
zs-ttcs-step2 = "zs_ttcs.cli:step2_cli"
zs-ttcs-step3 = "zs_ttcs.cli:step3_cli"
zs-ttcs-pipeline = "zs_ttcs.cli:pipeline_cli"
zs-ttcs = "zs_ttcs.cli:main"

[tool.setuptools.packages.find]
include = ["zs_ttcs*"]